# source-sdk-2013

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING  CONTRIBUTING.md  CREDITS  CREDITS.md  GDD.txt  ISSUE_TEMPLATE.md  LICENSE  LICENSE.md  Notes.txt  Peli  README  README.md  TODO.md  appveyor.yml  clave.txt  gameinfo.txt  linux.sh  mod_GDD.txt  thirdpartylegalnotices.txt  windows.bat
.github/: CONTRIBUTING.md  FUNDING.yml  labeler.yml  pull-request-template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug_report.md  02-feature_request.md  03-custom.md  bug-report---code.md  bug-report---game.md  bug-report---misc.md  bug-report---npc.md  bug-report---tools.md  bug-report---visuals-graphics.md  bug-report---vscript.md  feature-request---code.md  feature-request---game.md  feature-request---misc.md  feature-request---npc.md  feature-request---tools.md  feature-request---visuals-graphics.md  feature-request---vscript.md  game---bug-report.md  game---feature-request.md  miscellaneous---bug-report.md  miscellaneous---feature-request.md  visuals-graphics---bug-report.md  visuals-graphics---feature-request.md  vscript---bug-report.md  vscript---feature-request.md
.github/workflows/: main.yml  mapbase_build-base-dispatch.yml  mapbase_build-base.yml  mapbase_build-master.yml  mapbase_build-sp-games.yml  mapbase_build-sp-maptools.yml  mapbase_build-sp-shaders.yml  mapbase_pr.yml
game/: deploy_hl2dm_x64_server.sh  mod_hl2mp_linux64  thirdpartylegalnotices.txt
game/mod_episodic/: gameinfo.txt
game/mod_hl2/: gameinfo.txt  lights.rad
game/mod_hl2mp/: gameinfo.txt  steam.inf
game/mod_tf/: GameState.txt  gameinfo.txt  gameinfo_server.txt  steam.inf  tf2_playerstats.dmx  voice_ban.dt
mp/src/: EverythingMP_SDK-2010.sln  Game_HL2MP-2010.sln  _clang-format  createallprojects  createallprojects.bat  createallprojects.sh  creategameprojects  creategameprojects.bat  creategameprojects.ps1  creategameprojects.sh  createpysourceprojects.bat  game_hl2mp_linux32.mak  game_hl2mp_osx32.mak  sln_fix.txt
sp/: FeaturesAdded.txt  run.bat  shaderedit.bat  tools.bat
sp/src/: EverythingSP_SDK-2010.sln  EverythingSP_SDK-2012.sln  Game_Episodic-2010.sln  Game_Episodic-2012.sln  Game_HL2-2010.sln  Game_HL2-2012.sln  createallprojects  createallprojects.bat  creategameprojects  creategameprojects.bat  creategstring.bat  createmaptoolsprojects  createmaptoolsprojects.bat  createsdk2013ce.bat  createshadersprojects  createshadersprojects.bat  game_episodic_linux32.mak  game_episodic_osx32.mak  game_hl2_linux32.mak  game_hl2_osx32.mak  msbuild.bat
sp/src/vscript/squirrel/: .gitignore  .travis.yml  CMakeLists.txt  COMPILE  COPYRIGHT  HISTORY  Makefile  README  appveyor.yml  squirrel-config.cmake.in
sp/src/vscript/squirrel/doc/: Makefile  make.bat
sp/src/vscript/squirrel/doc/source/: conf.py  index.rst
sp/src/vscript/squirrel/doc/source/reference/: api_reference.rst  embedding_squirrel.rst  index.rst  introduction.rst  language.rst
sp/src/vscript/squirrel/doc/source/reference/api/: bytecode_serialization.rst  calls.rst  compiler.rst  debug_interface.rst  garbage_collector.rst  object_creation_and_handling.rst  object_manipulation.rst  raw_object_handling.rst  stack_operations.rst  virtual_machine.rst
sp/src/vscript/squirrel/doc/source/reference/embedding/: build_configuration.rst  calling_a_function.rst  compiling_a_script.rst  creating_a_c_function.rst  debug_interface.rst  error_conventions.rst  memory_management.rst  references_from_c.rst  runtime_error_handling.rst  tables_and_arrays_manipulation.rst  the_registry_table.rst  the_stack.rst  userdata_and_userpointers.rst  vm_initialization.rst
sp/src/vscript/squirrel/doc/source/reference/language/: arrays.rst  builtin_functions.rst  classes.rst  constants_and_enumerations.rst  datatypes.rst  delegation.rst  execution_context.rst  expressions.rst  functions.rst  generators.rst  lexical_structure.rst  metamethods.rst  statements.rst  tables.rst  threads.rst  weak_references.rst
sp/src/vscript/squirrel/doc/source/stdlib/: index.rst  introduction.rst  stdauxlib.rst  stdbloblib.rst  stdiolib.rst  stdmathlib.rst  stdstringlib.rst  stdsystemlib.rst
sp/src/vscript/squirrel/etc/: minimal.c
sp/src/vscript/squirrel/include/: sqconfig.h  sqstdaux.h  sqstdblob.h  sqstdio.h  sqstdmath.h  sqstdstring.h  sqstdsystem.h  squirrel.h
sp/src/vscript/squirrel/sq/: CMakeLists.txt  Makefile  sq.c  sq.dsp
sp/src/vscript/squirrel/sqstdlib/: CMakeLists.txt  Makefile  sqstdaux.cpp  sqstdblob.cpp  sqstdblobimpl.h  sqstdio.cpp  sqstdmath.cpp  sqstdrex.cpp  sqstdstream.cpp  sqstdstream.h  sqstdstring.cpp  sqstdsystem.cpp
sp/src/vscript/squirrel/squirrel/: CMakeLists.txt  Makefile  sqapi.cpp  sqarray.h  sqbaselib.cpp  sqclass.cpp  sqclass.h  sqclosure.h  sqcompiler.cpp  sqcompiler.h  sqdebug.cpp  sqfuncproto.h  sqfuncstate.cpp  sqfuncstate.h  sqlexer.cpp  sqlexer.h  sqmem.cpp  sqobject.cpp  sqobject.h  sqopcodes.h  sqpcheader.h  sqstate.cpp  sqstate.h  sqstring.h  sqtable.cpp  sqtable.h  squserdata.h  squtils.h  sqvm.cpp  sqvm.h
src/: buildallprojects  builddedicatedserver  createallprojects.bat  creatededicatedserver.ps1  creategameprojects  creategameprojects.bat  sdk_container
src/common/: compiledcaptionswap.cpp  debug_dll_check.cpp  debug_lib_check.cpp  imageutils.cpp  imageutils.h  language.cpp  language.h  proto_version.h  protoutils.cpp  protoutils.h  qlimits.h  simplebitstring.cpp  simplebitstring.h  steamid.cpp  studiobyteswap.cpp  studiobyteswap.h  userid.h  vscript_utils.h
src/devtools/: makefile_base_posix.mak  release.xcconfig  sourcesdk_def.mak
src/fgdlib/: fgdlib.vpc  gdvar.cpp  inputoutput.cpp
src/game/: protobuf_include.vpc
src/gcsdk/: gcsdk_game_include.vpc  steammessages.proto  steammessages_include.vpc
src/launcher_main/: launcher_main.vpc  launcher_main_mod_hl2mp.rc  launcher_main_mod_hl2mp.vpc  launcher_main_mod_tf.rc  launcher_main_mod_tf.vpc  main.cpp  resource.h
src/materialsystem/: materialsystem_global.h
src/mathlib/: IceKey.cpp  anorms.cpp  bumpvects.cpp  color_conversion.cpp  datagen.pl  sse.cpp  (+9 more)
(+25238 files in other folders)
